--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="timer">
+  <div class="Alarm">
     <h1>Alarm </h1>
     <input type="text" value="00" id="seconds-input">
     <div>
